--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <app-main-nav>
-  <div class="tabsAny">
-    tabs!
-  </div>
-  <button mat-raised-button color="accent">Click me!</button>
-  <div class="textAny">
-    <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At et explicabo, incidunt ipsam laboriosam laborum libero maxime. Asperiores eveniet ex explicabo inventore magni maiores, nostrum odit praesentium quasi repellat reprehenderit.</span><span>Amet incidunt molestiae omnis quisquam sequi tempore. A adipisci, alias animi, aperiam aut deleniti dolores harum impedit ipsa itaque laboriosam maiores mollitia numquam odio quae quibusdam quisquam quo soluta voluptate!</span><span>Alias eveniet itaque iusto nam, nihil repellendus repudiandae tenetur vero! Amet animi atque cupiditate doloremque enim esse ex fugit hic id ipsum nesciunt quo sequi soluta, totam voluptatum. Eos, quibusdam?</span></p>
-  </div>
+  <app-tabs></app-tabs>
+  <app-content></app-content>
 </app-main-nav>
 
