--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,8 @@ body {
 
 body {
   margin: 0;
+  padding-top: 40px;
+  background: rgba(55, 53, 53, 1);
 }
 
 .tabsAny {
@@ -17,11 +19,73 @@ body {
   align-items: center;
   text-transform: uppercase;
 
-  height: 50px;
+  height: 56px;
   width: 100%;
   background: gray;
 }
 
 .textAny {
   padding: 10px;
+}
+
+// стили меню
+
+.sidenav-container {
+  height: 100%;
+}
+
+.sidenav {
+  width: 308px;
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.hidden {
+  display: none;
+}
+
+.spacer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex-grow: 1;
+
+  a {
+    margin-left: 15px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 12px;
+  }
+}
+
+.mat-toolbar {
+  height: 90px !important;
+}
+
+.mat-sidenav-content {
+  background: rgba(0, 0, 255, 0.76);
+}
+
+
+.menuTopBlock {
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+.menuTopBlock__name {
+  font-size: 20px;
+}
+
+.menuTopBlock__balance {
+  font-size: 13px;
 }
